# vc-witness

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker-release.yml
migrations/: 0001_init.sql  0002_category_description.sql
src/: config.rs  error.rs  main.rs
src/consent/: cache.rs  mod.rs  reminder.rs
src/db/: categories.rs  consent.rs  decisions.rs  guild_config.rs  mod.rs  reports.rs  voice_events.rs
src/discord/: mod.rs  state.rs  voice_state_listener.rs
src/discord/commands/: config.rs  data_erase.rs  data_request.rs  mod.rs  report.rs  report_context_menu.rs
src/discord/components/: mod.rs  report_message.rs
src/discord/interactions/: consent_dm.rs  decision_buttons.rs  mod.rs  modal_report.rs
src/report/: eligibility.rs  mod.rs  pipeline.rs
src/transcription/: mod.rs  pipeline.rs  resample.rs  types.rs
src/util/: time.rs
src/voice/: buffer.rs  finalize.rs  manager.rs  mod.rs  receiver.rs  strategy.rs
src/voice/strategies/: busiest.rs  mod.rs  most_recent_activity.rs  sticky_until_empty.rs
